infra/k8s/production/gateway_frontend.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: frontend
  annotations:
    networking.gke.io/certmap: app-certmap
spec:
  gatewayClassName: gke-l7-global-external-managed
  addresses:
    - type: NamedAddress
      value: frontend
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: All
---
# HTTP route -> reroute request to HTTPS
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: frontend-http-to-https-redirect
spec:
  parentRefs:
    - name: frontend
      namespace: app
      sectionName: http
  hostnames:
    - proofpass.io
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: frontend
  namespace: app
spec:
  parentRefs:
    - name: frontend
      namespace: app
      sectionName: https
  hostnames:
    - proofpass.io
  rules:
    - matches:
        - path:
            value: /
      backendRefs:
        - name: frontend
          namespace: app
          kind: Service
          port: 8080
